[package]
name = "sidefuzz"
version = "0.1.2"
authors = ["phayes <patrick.d.hayes@gmail.com>"]
edition = "2018"
readme = "README.md"
license = "MIT OR Apache-2.0"
repository = "https://github.com/phayes/sidefuzz"
description = "Fuzzer to automatically find side-channel (timing) vulnerabilities"
keywords = ["fuzzing", "constant-time", "cryptography", "wasm"]
categories = ["cryptography", "development-tools::testing"]

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
rand = "0.6.5"
hex = "0.3.2"
statrs = "0.10.0"
rolling-stats = "0.1.0"
clap = "2.33.0"
failure = "0.1.5"
color-backtrace = { version = "0.1" }
float_duration = {git = "https://github.com/phayes/rust-float-duration"}
wasmi = {path = "./vendor/wasmi"}

[dependencies]
lazy_static = "1.3.0"

[[bin]]
name = "sidefuzz"
doc = false